--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Kenneth Ye" />
     <meta name="description" content="Personal portfolio displaying projects" />
-    <link href="index_style.css" rel="stylesheet" />
+    <link href="projects.css" rel="stylesheet" />
     <link href="navbar_style.css" rel="stylesheet">
-    <title>Portfilo</title>
+    <title>Portfilo - About</title>
   </head>
   <nav>
     <div id="container">
@@ -20,18 +20,6 @@
   </nav>
   <body>
     <main>
-      <div class="welcome_container">
-        <div class="welcome">
-          <header>
-            <h1>Welcome to my portfolio!</h1>
-          </header>
-          <p class="description">Visit other pages to explore more about me.</p>
-        </div>
-        <div>
-          <img class="lan_img" src="html_logo.png" alt="html logo" />
-          <img class="lan_img" src="css_logo.png" alt="css_logo" />
-        </div>
-      </div>
     </main>
   </body>
 </html>
