--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
   </head>
   <nav>
     <div id="container">
-      <img src="moon.jpg" id="moon_img" />
-      <a id="home" href="portfolio_index.html">HOME</a>
+      <img src="images/moon.jpg" id="moon_img" />
+      <a id="home" href="index.html">HOME</a>
       <a id="about" href="about.html">ABOUT</a>
       <a id="projects" href="projects.html">PROJECTS</a>
       <a id="contact" href="contact.html">CONTACT</a>
