--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <nav>
     <div id="container">
-      <img src="moon.jpg" id="moon_img" />
-      <a id="home" href="portfolio_index.html">HOME</a>
+      <img src="images/moon.jpg" id="moon_img" />
+      <a id="home" href="index.html">HOME</a>
       <a id="about" href="about.html">ABOUT</a>
       <a id="projects" href="projects.html">PROJECTS</a>
       <a id="contact" href="contact.html">CONTACT</a>
@@ -28,8 +28,8 @@
           <p class="description">Visit other pages to explore more about me.</p>
         </div>
         <div>
-          <img class="lan_img" src="html_logo.png" alt="html logo" />
-          <img class="lan_img" src="css_logo.png" alt="css_logo" />
+          <img class="lan_img" src="images/html_logo.png" alt="html logo" />
+          <img class="lan_img" src="images/css_logo.png" alt="css_logo" />
         </div>
       </div>
     </main>
