--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Personal portfolio displaying projects" />
     <link href="projects.css" rel="stylesheet" />
     <link href="navbar_style.css" rel="stylesheet">
-    <title>Portfilo - About</title>
+    <title>Portfilo - Projects</title>
   </head>
   <nav>
     <div id="container">
