New UI, Color, and page

--- a/about.html
+++ b/about.html
@@ -6,12 +6,12 @@
     <meta name="author" content="Kenneth Ye" />
     <meta name="description" content="Personal portfolio displaying projects" />
     <link href="about.css" rel="stylesheet" />
-    <link href="navbar_style.css" rel="stylesheet">
+    <link href="navbar_style.css" rel="stylesheet" />
     <title>Portfilo - About</title>
   </head>
   <nav>
     <div id="container">
-      <img src="images/moon.jpg" id="moon_img" />
+      <img src="images/dev-icon.png" id="dev_img" />
       <a id="home" href="index.html">HOME</a>
       <a id="about" href="about.html">ABOUT</a>
       <a id="projects" href="projects.html">PROJECTS</a>
@@ -19,7 +19,24 @@
     </div>
   </nav>
   <body>
+    <header>
+      <h1 class="about-me">ABOUT ME</h1>
+      <p class="tag italic">Description about me and who I am.</p>
+    </header>
     <main>
+      <div class="aboutme-container">
+        <figure>
+          <img class="pfp" src="images/moon.jpg" />
+        </figure>
+        <div class="description">
+          <aside>
+            <h1 class="name">Jayden Chen</h1>
+            <p>Age: 16</p>
+            <p>Location: New Zeland</p>
+            <p>Education: High School</p>
+          </aside>
+        </div>
+      </div>
     </main>
   </body>
 </html>
