--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   </head>
   <nav>
     <div id="container">
-      <img src="images/moon.jpg" id="moon_img" />
+      <img src="images/dev-icon.png" id="dev_img" />
       <a id="home" href="index.html">HOME</a>
       <a id="about" href="about.html">ABOUT</a>
       <a id="projects" href="projects.html">PROJECTS</a>
