--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="author" content="Kenneth Ye" />
     <meta name="description" content="Personal portfolio displaying projects" />
     <link href="index_style.css" rel="stylesheet" />
-    <link href="navbar_style.css" rel="stylesheet">
+    <link href="navbar_style.css" rel="stylesheet" />
     <title>Portfilo</title>
   </head>
   <nav>
     <div id="container">
-      <img src="images/moon.jpg" id="moon_img" />
+      <img src="images/dev-icon.png" id="dev_img" alt="main olgo for nav bar"/>
       <a id="home" href="index.html">HOME</a>
       <a id="about" href="about.html">ABOUT</a>
       <a id="projects" href="projects.html">PROJECTS</a>
@@ -29,6 +29,8 @@
         </div>
         <div>
           <img class="lan_img" src="images/html_logo.png" alt="html logo" />
+        </div>
+        <div>
           <img class="lan_img" src="images/css_logo.png" alt="css_logo" />
         </div>
       </div>
