--- a/projects.html
+++ b/projects.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Kenneth Ye" />
     <meta name="description" content="Personal portfolio displaying projects" />
-    <link href="projects.css" rel="stylesheet" />
-    <link href="navbar_style.css" rel="stylesheet">
+    <link href="css/about.css" rel="stylesheet" />
+    <link href="css/navbar_style.css" rel="stylesheet">
     <title>Portfilo - Projects</title>
   </head>
   <nav>
     <div id="container">
       <img src="images/dev-icon.png" id="dev-img" />
-      <a id="home" href="index.html">HOME</a>
-      <a id="about" href="about.html">ABOUT</a>
-      <a id="projects" href="projects.html">PROJECTS</a>
-      <a id="contact" href="contact.html">CONTACT</a>
+      <input class="search-bar" type="search" placeholder="SEARCH"/>
+      <a id="home" onclick="home()">HOME</a>
+      <a id="about" onclick="about()">ABOUT</a>
+      <a id="projects" onclick="projects()">PROJECTS</a>
+      <a id="contact" onclick="contact()">CONTACT</a>
+      <script src="Js/nav-bar.js"></script>
     </div>
   </nav>
   <body>
